Verify THP for heap in test